# ntpan

./: .flake8  .gitignore  README.md  config.example.yaml  pyproject.toml
ntpan/: config.py  device.py  email_template.html.j2  log.py  mailer.py  main.py  panorama.py  parse.py  scheduler.py
ntpan/models/: device.py  params.py
